--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,4 +20,4 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
     - name: Test
-      run: dotnet test ./tests/YourApp.Tests/Tests.Tests.csproj --verbosity normal
+      run: dotnet test ./Tests/*.csproj --verbosity normal
