--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,4 +29,19 @@ jobs:
       run: dotnet build --no-restore
 
     - name: Test
-      run: dotnet test ./Tests/*.csproj --verbosity normal
+      run: dotnet test ./Tests/*.csproj --verbosity quiet
+
+  parallelJob:
+     runs-on: ubuntu-latest
+     steps:
+  
+      - name: Parallel Job Step 1
+        run: echo "This is step 1 of the parallel job."
+
+  dependantJob:
+    needs: parallelJob
+    runs-on: ubuntu-latest
+    steps:
+
+      - name: Dependant Job Step
+        run: echo "This job runs after the parallel job is complete."
