--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,18 +31,14 @@ jobs:
     - name: Test
       run: dotnet test ./Tests/*.csproj --verbosity quiet
 
-  parallelJob:
+  CheckOutJob:
      runs-on: ubuntu-latest
      needs: build
      steps:
   
-      - name: Parallel Job Step 1
-        run: echo "This is step 1 of the parallel job."
+      - name: List files before
+        run: ls -a
+      - uses: actions/checkout@v3 
 
-  dependantJob:
-    needs: parallelJob
-    runs-on: ubuntu-latest
-    steps:
-
-      - name: Dependant Job Step
-        run: echo "This job runs after the parallel job is complete."
+      - name: List files before
+        run: ls -a
