--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -38,7 +38,8 @@ jobs:
   
       - name: List files before
         run: ls -a
+        
       - uses: actions/checkout@v3 
 
-      - name: List files before
+      - name: List files after
         run: ls -a
