added missing environment

--- a/.github/workflows/variables-secrets.yml
+++ b/.github/workflows/variables-secrets.yml
@@ -4,6 +4,7 @@ on: [push]
 jobs:
     log-vars:
      runs-on: ubuntu-latest
+     environment: Production
      env:
       MY_SECRET: ${{secrets.MY_SECRET}}
       BANANAS_QUANTITY: ${{vars.ENV_BANANAS_QUANTITY}}
