--- a/.github/workflows/variables-secrets.yml
+++ b/.github/workflows/variables-secrets.yml
@@ -19,6 +19,7 @@ jobs:
         - name: log vars
           run: |
            echo '${{env.BANANAS_QUANTITY}}'
+           echo '${{env.MY_SECRET}}'
            echo '${{env.REPOSITORY_SECRET}}'
            echo '${{env.REPOSITORY_VARIABLE}}'
            echo '${{env.ACTIVATED}}'
