repo secret fix

--- a/.github/workflows/variables-secrets.yml
+++ b/.github/workflows/variables-secrets.yml
@@ -8,7 +8,7 @@ jobs:
      env:
       MY_SECRET: ${{secrets.MY_SECRET}}
       BANANAS_QUANTITY: ${{vars.ENV_BANANAS_QUANTITY}}
-      REPOSITORY_SECRET: ${{vars.REPOSITORY_SECRET}}
+      REPOSITORY_SECRET: ${{ secrets.REPOSITORY_SECRET }}
       REPOSITORY_VARIABLE: ${{vars.REPOSITORY_VARIABLE}}
       ACTIVATED: ${{vars.ACTIVATED}}
       
